src/test/deca/syntax/invalid/wrong_decl12.deca
//Description
//    Vérifier la decl de param
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


class A{

  void setX(if a){

  }

}
